@@ -62,26 +62,26 @@ sub findCallback {
                  );
 
   if ($matches) {
-    $matches &&= (! -l $_           &&
-                  ! /^core\z/s      &&
-                  ! /^.*\.rej\z/s   &&
-                  ! /^.*\.state\z/s &&
-                  ! /^.*\.so\z/s    &&
-                  ! /^.*\.[oa]\z/s  &&
-                  ! /^.*\.dll\z/s   &&
-                  ! /^.*\.lib\z/s   &&
-                  ! /^.*\.obj\z/s   &&
-                  ! /^.*~\z/s       &&
-                  ! /^\.\z/s        &&
-                  ! /^\.#.*\z/s     &&
-                  ! /^.*\.ncb\z/s   &&
-                  ! /^.*\.opt\z/s   &&
-                  ! /^.*\.bak\z/s   &&
-                  ! /^.*\.suo\z/s   &&
-                  ! /^.*\.ilk\z/s   &&
-                  ! /^.*\.pdb\z/s   &&
-                  ! /^.*\.pch\z/s   &&
-                  ! /^.*\.log\z/s   &&
+    $matches &&= (! -l $_                  &&
+                  ! ( -f $_ && /^core\z/s) &&
+                  ! /^.*\.rej\z/s          &&
+                  ! /^.*\.state\z/s        &&
+                  ! /^.*\.so\z/s           &&
+                  ! /^.*\.[oa]\z/s         &&
+                  ! /^.*\.dll\z/s          &&
+                  ! /^.*\.lib\z/s          &&
+                  ! /^.*\.obj\z/s          &&
+                  ! /^.*~\z/s              &&
+                  ! /^\.\z/s               &&
+                  ! /^\.#.*\z/s            &&
+                  ! /^.*\.ncb\z/s          &&
+                  ! /^.*\.opt\z/s          &&
+                  ! /^.*\.bak\z/s          &&
+                  ! /^.*\.suo\z/s          &&
+                  ! /^.*\.ilk\z/s          &&
+                  ! /^.*\.pdb\z/s          &&
+                  ! /^.*\.pch\z/s          &&
+                  ! /^.*\.log\z/s          &&
                   ! ( -f $_ && /^.*\.d\z/s )
                  );
 
